--- a/oe_kemexon_custom/views/stock_picking_view.xml
+++ b/oe_kemexon_custom/views/stock_picking_view.xml
@@ -29,6 +29,9 @@
                             </group>
                         </group>
                     </page>
+                    <page name="truck_details" string="Truck Details">
+                        <field name="truck_transport_details_ids"/>
+                    </page>
                 </xpath>
             </field>
         </record>
