--- a/oe_kemexon_custom/report/delivery_sale_invoice_template.xml
+++ b/oe_kemexon_custom/report/delivery_sale_invoice_template.xml
@@ -4,21 +4,29 @@
             <t t-call="web.html_container">
                 <t t-call="web.external_layout">
                     <t t-foreach="docs" t-as="o">
-                        <hr style="height:2px; border:none; background-color:black;"/>
-                        <h3 class="text-center">Delivery Sales INVOICE</h3>
-                        <hr style="height:2px; border:none; background-color:black;"/>
+                        <hr style="height:2px;border-width:3;color:black;background-color:black"/>
+                        <h2 class="text-center">Delivery Sales INVOICE</h2>
+                        <hr style="height:2px;border-width:3;color:black;background-color:black"/>
+                        <t t-set="truck_transport_details_ids" t-value="False"/>
+                        <t t-if="o.truck_transport_details_ids">
+                            <t t-foreach="o.truck_transport_details_ids" t-as="item">
+                                <t t-if="item.is_add_report">
+                                   <t t-set="truck_transport_details_ids" t-value="item"/>
+                                </t>
+                            </t>
+                        </t>
 
                         <div class="row">
                             <div class="col-4">
                                 <div class="row">
-                                    Reference:
+                                    <b>Reference:</b>
                                     <span t-field="o.name"/>
                                 </div>
                             </div>
                             <div class="col-4"/>
                             <div class="col-4">
                                 <div class="row">
-                                    Date :
+                                    <b>Date :</b>
                                     <span class="m-0" t-field="o.scheduled_date"/>
 
                                 </div>
@@ -109,68 +117,68 @@
                             </tbody>
                         </table>
                         <br/>
-                        <h3 class="text-left">Truck Information</h3>
+                        <b class="text-left">Truck Information</b>
                         <hr style="height:2px; border:none; background-color:black;"/>
                         <br/>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <div class="row">
-                                    Truck No:
+                                    <b>Truck No:</b>
 
-                                     <t t-if="o.truck_transport_details_ids">
-                                       <span t-field="o.truck_transport_details_ids[0].truck"/>
+                                    <t t-if="truck_transport_details_ids">
+                                        <span t-field="truck_transport_details_ids.truck"/>
                                     </t>
                                 </div>
                                 <div class="row">
-                                    Transporter :
-                                   <span t-field="o.transporter"/>
+                                    <b>Transporter :</b>
+                                    <span t-field="o.transporter"/>
 
                                 </div>
                             </div>
-                            <div class="col-8"/>
+                            <div class="col-6"/>
                         </div>
                         <br/>
-                        <h3 class="text-left">Delivery Information</h3>
+                        <b class="text-left">Delivery Information</b>
                         <hr style="height:2px; border:none; background-color:black;"/>
                         <br/>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <div class="row">
-                                    Incotems:
+                                    <b>Incotems:</b>
                                     <t t-if="o.sale_id">
-                                         <span t-field="o.sale_id.incoterm"/>
+                                        <span t-field="o.sale_id.incoterm"/>
                                     </t>
 
                                 </div>
                                 <div class="row">
-                                    Delivery Location:
+                                    <b>Delivery Location:</b>
                                     <span t-field="o.delivery_location"/>
                                 </div>
                                 <div class="row">
-                                    Loading Point:
+                                    <b>Loading Point:</b>
                                     <span t-field="o.name"/>
                                 </div>
                             </div>
-                            <div class="col-8"/>
+                            <div class="col-6"/>
 
                         </div>
 
 
                         <p style="page-break-before:always;"></p>
-                        <hr style="height:2px; border:none; background-color:black;"/>
-                        <h3 class="text-center">Delivery Note</h3>
-                        <hr style="height:2px; border:none; background-color:black;"/>
+                        <hr style="height:2px; border: 1px solid black; background-color:black;"/>
+                        <h2 class="text-center">Delivery Note</h2>
+                        <hr style="height:2px; border: 1px solid black; background-color:black;"/>
                         <div class="row">
                             <div class="col-4">
                                 <div class="row">
-                                    Reference:
+                                    <b>Reference:</b>
                                     <span t-field="o.name"/>
                                 </div>
                             </div>
                             <div class="col-4"/>
                             <div class="col-4">
                                 <div class="row">
-                                    Date :
+                                    <b>Date :</b>
                                     <span class="m-0" t-field="o.scheduled_date"/>
 
                                 </div>
@@ -236,70 +244,74 @@
                                         <td>
                                             <span t-field="move.product_id.uom_id"/>
                                         </td>
-                                        <td> <span t-field="move.product_uom_qty"/></td>
-                                        <td> <span t-field="move.forecast_availability"/></td>
+                                        <td>
+                                            <span t-field="move.product_uom_qty"/>
+                                        </td>
+                                        <td>
+                                            <span t-field="move.forecast_availability"/>
+                                        </td>
                                     </tr>
                                 </t>
                             </tbody>
                         </table>
-                   <br/>
-                        <h3 class="text-left">Truck Information</h3>
+                        <br/>
+                        <b class="text-left">Truck Information</b>
                         <hr style="height:2px; border:none; background-color:black;"/>
                         <br/>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <div class="row">
-                                    Truck No:
+                                    <b>Truck No:</b>
 
-                                    <t t-if="o.truck_transport_details_ids">
-                                       <span t-field="o.truck_transport_details_ids[0].truck"/>
+                                    <t t-if="truck_transport_details_ids">
+                                        <span t-field="truck_transport_details_ids.truck"/>
                                     </t>
                                 </div>
                                 <div class="row">
-                                    Transporter :
+                                    <b>Transporter :</b>
                                     <span t-field="o.transporter"/>
 
                                 </div>
-                                  <div class="row">
-                                    Driver Passport :
-                                    <t t-if="o.truck_transport_details_ids">
-                                       <span t-field="o.truck_transport_details_ids[0].passport"/>
+                                <div class="row">
+                                    <b>Driver Passport :</b>
+                                    <t t-if="truck_transport_details_ids">
+                                        <span t-field="truck_transport_details_ids.passport"/>
                                     </t>
 
                                 </div>
-                                 <div class="row">
-                                    Driver Name :
-                                    <t t-if="o.truck_transport_details_ids">
-                                       <span t-field="o.truck_transport_details_ids[0].driver"/>
+                                <div class="row">
+                                    <b>Driver Name :</b>
+                                    <t t-if="truck_transport_details_ids">
+                                        <span t-field="truck_transport_details_ids.driver"/>
                                     </t>
 
                                 </div>
                             </div>
-                            <div class="col-8"/>
+                            <div class="col-6"/>
                         </div>
                         <br/>
-                        <h3 class="text-left">Delivery Information</h3>
+                        <b class="text-left">Delivery Information</b>
                         <hr style="height:2px; border:none; background-color:black;"/>
                         <br/>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <div class="row">
-                                    Incotems:
+                                    <b>Incotems:</b>
                                     <t t-if="o.sale_id">
-                                         <span t-field="o.sale_id.incoterm"/>
+                                        <span t-field="o.sale_id.incoterm"/>
                                     </t>
 
                                 </div>
                                 <div class="row">
-                                    Delivery Location:
+                                    <b>Delivery Location:</b>
                                     <span t-field="o.delivery_location"/>
                                 </div>
                                 <div class="row">
-                                    Loading Point:
+                                    <b>Loading Point:</b>
                                     <span t-field="o.name"/>
                                 </div>
                             </div>
-                            <div class="col-8"/>
+                            <div class="col-6"/>
 
                         </div>
 
