--- a/oe_kemexon_custom/views/trucktransportdetails.xml
+++ b/oe_kemexon_custom/views/trucktransportdetails.xml
@@ -14,6 +14,7 @@
                 <field name="offloaded"/>
                 <field name="status"/>
                 <field name="statusdate"/>
+                <field name="is_add_report"/>
             </tree>
         </field>
     </record>
@@ -33,6 +34,7 @@
                             <field name="offloaded"/>
                             <field name="status"/>
                             <field name="statusdate"/>
+                            <field name="is_add_report"/>
                         </group>
                 </sheet>
             </form>
