[MOD] aged balance report edit

--- a/oe_kemexon_custom/report/aged_balance_report.xml
+++ b/oe_kemexon_custom/report/aged_balance_report.xml
@@ -86,7 +86,7 @@
 
                                     </t>
                                     <tr>
-                                        <th style="text-align: left;">Total</th>
+                                        <th style="text-align: left;">Total (USD)</th>
                                         <td/>
                                         <td/>
                                         <td/>
